<resources>
    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="empty_list">Your list is empty</string>
    <string name="image_empty_list_description">Image empty list</string>
    <string name="add_items_description">Add items</string>
    <string name="hint_quantity">Quantity</string>
    <string name="tv_total">Total:</string>
    <string name="clear_list">Clear List</string>
    <string name="hint_product">Product</string>
    <string name="btn_save">Save</string>
    <string name="fill_fields">Fill in all fields</string>
    <string name="registered">Product registered successfully</string>
    <string name="already_registered">Product already registered</string>
</resources>